--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typescript": "3.3.4000"
   },
   "scripts": {
-    "build:css": "postcss src/index.css -o src/index.css",
-    "watch:css": "postcss src/index.css -o src/index.css -w",
+    "build:css": "postcss src/styles.css -o src/index.css",
+    "watch:css": "postcss src/styles.css -o src/index.css -w",
     "start": "npm run watch:css & react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
@@ -30,7 +30,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/free-solid-svg-icons": "^5.8.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/lodash": "^4.14.123",
     "autoprefixer": "^9.5.0",
+    "lodash": "^4.17.11",
     "postcss-cli": "^6.1.2",
     "tailwindcss": "^0.7.4"
   }
