Using bootstrap instead plain HTML

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/lodash": "^4.14.123",
+    "@types/react-bootstrap": "^0.32.17",
     "autoprefixer": "^9.5.0",
     "lodash": "^4.17.11",
     "postcss-cli": "^6.1.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "tailwindcss": "^0.7.4"
   }
 }
