--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-scripts": "2.1.8",
+    "typescript": "3.3.4000",
+    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/free-solid-svg-icons": "^5.8.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "autoprefixer": "^9.5.0",
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "postcss-cli": "^6.1.2",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-spinners": "^0.5.3",
+    "tailwindcss": "^0.7.4",
+    "@types/lodash": "^4.14.123",
     "@types/jest": "24.0.11",
     "@types/node": "11.11.4",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "typescript": "3.3.4000"
+    "@types/axios": "^0.14.0",
+    "@types/react-bootstrap": "^0.32.17"
   },
   "scripts": {
     "build:css": "postcss src/styles.css -o src/index.css",
@@ -30,17 +43,5 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.16",
-    "@fortawesome/free-solid-svg-icons": "^5.8.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.14.123",
-    "@types/react-bootstrap": "^0.32.17",
-    "autoprefixer": "^9.5.0",
-    "axios": "^0.18.0",
-    "lodash": "^4.17.11",
-    "postcss-cli": "^6.1.2",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "tailwindcss": "^0.7.4"
   }
 }
